layouts and partials

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,8 @@
-<html>
-    <head>
-        <title>
-        <%= title %>
-        </title>
-        </head>
-        <body>
+
+     
+          <link rel="stylesheet" href="css/user.css">
             <h1>
                 First HTML ejs file!!
             </h1>
-        </body>
-</html>
+            
+       
